# Udacity-Self-Driving-Car

./: .gitignore  README.md
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/: Report.md
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/1_model_training/: 1_train_model.ipynb  data.yaml  yolo-convert.py  yolo-train.py
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/1_model_training/logs/ssd_resnet50_v1/train/: events.out.tfevents.1716882586.ip-10-0-146-243.ec2.internal.46.0.v2
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/1_model_training/runs/detect/yolov8m/: args.yaml  events.out.tfevents.1716956010.karthiaru-dl-rig.57674.0  results.csv
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/1_model_training/runs/detect/yolov8x/: args.yaml  events.out.tfevents.1716958964.karthiaru-dl-rig.68155.0  results.csv
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/1_model_training/runs/detect/yolov8x-aug/: args.yaml  events.out.tfevents.1716962306.karthiaru-dl-rig.85157.0  results.csv
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/1_model_training/source_dir/: pipeline-efficientdet_d1.config  pipeline-ssd_mobilenet_v2.config  pipeline-ssd_resnet50_v1.config
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/2_run_inference/: 2_deploy_model.ipynb
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/data/yolo/train/: labels.cache
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/data/yolo/train/labels/: segment-10017090168044687777_6380_000_6400_000_with_camera_labels_0.txt  segment-10017090168044687777_6380_000_6400_000_with_camera_labels_1.txt  segment-10017090168044687777_6380_000_6400_000_with_camera_labels_10.txt  segment-10017090168044687777_6380_000_6400_000_with_camera_labels_11.txt  (+1761 more)
1. Computer Vision/cd2688-object-detection-in-urban-environment-project/data/yolo/val/: labels.cache
2. Localization/SFND_Lidar_Obstacle_Detection/: CMakeLists.txt
2. Localization/exercises/: a.out  factorial.cpp  priors.cpp  priors.out
2. Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-ICP/: CMakeLists.txt  icp2-main.cpp
2. Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-NDT/: CMakeLists.txt  ndt-main.cpp
2. Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Intro-to-ICP/: CMakeLists.txt  icp1-main.cpp
2. Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_6_Utilizing_Scan_Matching/Exercise-ICP-Alignment/: CMakeLists.txt  sm1-main.cpp
2. Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_6_Utilizing_Scan_Matching/Exercise-ICP-Alignment/solution/: sm1-main-solution.cpp
2. Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_6_Utilizing_Scan_Matching/Exercise-NDT-Alignment/: CMakeLists.txt  sm2-main.cpp
2. Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/: CMakeLists.txt  c3-main.cpp  helpers.cpp
3. Sensor-Fusion/SFA3D/sfa/: test.py
3. Sensor-Fusion/exercises/: basic_loop.py
3. Sensor-Fusion/exercises/lesson-1-lidar-sensor/examples/: l1_examples.py
3. Sensor-Fusion/exercises/lesson-1-lidar-sensor/exercises/starter/: l1_exercises.py
3. Sensor-Fusion/exercises/lesson-2-object-detection/exercises/solution/: l2_exercises.py
3. Sensor-Fusion/exercises/lesson-2-object-detection/exercises/starter/: l2_exercises.py
3. Sensor-Fusion/exercises/lesson-3-EKF/exercises/starter/: 1_predict_update.py  2_filter.py  3_measurements.py
3. Sensor-Fusion/exercises/lesson-4-MTT/exercises/starter/: 1_initialization.py  2_fov.py  3_association_matrix.py  4_gating.py
3. Sensor-Fusion/exercises/misc/: objdet_tools.py
3. Sensor-Fusion/exercises/tools/waymo_reader/simple_waymo_open_dataset_reader/: dataset_pb2.py  label_pb2.py
3. Sensor-Fusion/nd013-c2-fusion-starter/: Report - Final Term.md  Report - Mid Term.md  loop_over_dataset.py
3. Sensor-Fusion/nd013-c2-fusion-starter/misc/: params.py
3. Sensor-Fusion/nd013-c2-fusion-starter/student/: association.py  filter.py  measurements.py  objdet_detect.py  objdet_eval.py  objdet_pcl.py  trackmanagement.py
3. Sensor-Fusion/nd013-c2-fusion-starter/tools/waymo_reader/simple_waymo_open_dataset_reader/: dataset_pb2.py  label_pb2.py
4. Planning/exercises/: pseudocode-astar.py
4. Planning/exercises/quiz/: a.out  collision-detection.cpp  offset-goals.cpp  velocity-profile.cpp
4. Planning/exercises/quiz/01_impl_cost_fn_cpp/: a.out  cost.cpp
4. Planning/exercises/quiz/02_impl_second_cost_fn_cpp/: cost.cpp
4. Planning/exercises/quiz/03_impl_behavior_planner_cpp/: a.out  cost.cpp  vehicle.cpp
4. Planning/exercises/quiz/quintic-polynomial/: a.out  main.cpp
4. Planning/exercises/quiz/trajectoryexercise2/: constants.py  cost_functions.py  ptg.py
4. Planning/exercises/solution/01_impl_cost_fn_cpp/: cost.cpp
4. Planning/exercises/solution/02_impl_second_cost_fn_cpp/: cost.cpp
4. Planning/exercises/solution/03_impl_behavior_planner_cpp/: a.out  vehicle.cpp
4. Planning/exercises/solution/quintic-polynomial/: main.cpp
4. Planning/nd013-c5-planning-starter-master/project/starter_files/: behavior_planner_FSM.cpp  cost_functions.cpp  planning_params.h  velocity_profile_generator.cpp
5. Controls/exercise/: pd.ipynb  pid.ipynb  proportional.ipynb  twiddle.ipynb
5. Controls/nd013-c6-control-starter/project/: Report.md  plot_pid.py  plot_pos.py  simulatorAPI.py  steer_pid_data.txt  throttle_pid_data.txt  waypoint_log.txt
5. Controls/nd013-c6-control-starter/project/logs/town07/: steer_pid_data.txt  throttle_pid_data.txt
5. Controls/nd013-c6-control-starter/project/logs/town15/: steer_pid_data.txt  throttle_pid_data.txt
5. Controls/nd013-c6-control-starter/project/pid_controller/: CMakeLists.txt  main.cpp  pid_controller.cpp  pid_controller.h  planning_params.h
(+129 files in other folders)
